examples/test/testpolicy11994.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11994
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key19: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value46
          key39: value30
      podSelector:
        matchLabels:
          key8: value39
          key36: value18
